# LIMP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LIMP.hpp  README.md  build.ps1  build.sh  conanfile.py
.github/workflows/: release.yml
cmake/: LIMPConfig.cmake.in
docs/: router_dealer_api.md  transactional_api_design.md  transport_api.md
examples/: CMakeLists.txt  README.md  central_server_proxy.cpp  central_server_router.cpp  simple_request.cpp  simple_response.cpp  subscribe_example.cpp  zmq_broker_node_example.cpp  zmq_client_example.cpp  zmq_dealer_example.cpp  zmq_proxy_example.cpp  zmq_pubsub_example.cpp  zmq_router_example.cpp  zmq_server_example.cpp
examples/01_basic/: README.md  simple_request.cpp  simple_response.cpp
examples/02_request_reply/: README.md  client.cpp  server.cpp
examples/03_pubsub/: README.md  publisher_subscriber.cpp  subscriber_only.cpp
examples/04_router_dealer/: README.md  dealer.cpp  router.cpp
examples/05_broker/: README.md  broker_node.cpp  direct_routing.cpp  proxy_broker.cpp  router_broker.cpp
include/limp/: crc.hpp  frame.hpp  limp.hpp  message.hpp  transport.hpp  types.hpp  utils.hpp
include/limp/zmq/: zmq.hpp  zmq_client.hpp  zmq_config.hpp  zmq_dealer.hpp  zmq_proxy.hpp  zmq_publisher.hpp  zmq_router.hpp  zmq_server.hpp  zmq_subscriber.hpp  zmq_transport_base.hpp
src/: crc.cpp  frame.cpp  message.cpp  transport.cpp  utils.cpp
src/zmq/: zmq_client.cpp  zmq_dealer.cpp  zmq_proxy.cpp  zmq_publisher.cpp  zmq_router.cpp  zmq_server.cpp  zmq_subscriber.cpp  zmq_transport_base.cpp
tests/: CMakeLists.txt  test_frame.cpp
